
Wed Oct  6 12:53:33 PDT 1999
(Raster)

fix keybidnigns_changed flag to work right...

-------------------------------------------------------------------------------

Wed Oct  6 14:22:23 PDT 1999
(Raster)

fix lowerign of desktop 0 bug :)

-------------------------------------------------------------------------------

Wed Oct  6 16:44:32 PDT 1999
(Mandrake)

minor change in config.c - if you can't find ROOT_IMAGE menustyle, go back to
default in dirscan menus.  Also changed the ROOT_IMAGE menustyle to 20 length
in brushed metal

-------------------------------------------------------------------------------

Wed Oct  6 17:38:58 PDT 1999
(Raster)

turn off draw queue for ipc imageclass draws...

-------------------------------------------------------------------------------

Wed Oct  6 20:31:02 PDT 1999
(Raster)

need to add nop ipc call - need it for syncing purposes.

-------------------------------------------------------------------------------

Wed Oct  6 23:40:32 PDT 1999
(Raster)

/* that's it - people are stupid and have executable images and just */
/* don't get it - so I'm disablign this to save people from their own */
/* stupidity */

ho hum.........

-------------------------------------------------------------------------------

Thu Oct  7 12:10:53 PDT 1999
(Raster)

have the SetupUserInitialization chekc if the fopen succeeded.

-------------------------------------------------------------------------------

Thu Oct  7 13:49:23 PDT 1999
(Raster)

do the SetupUserInitialization late in the startup - not early.. :)

-------------------------------------------------------------------------------

Thu Oct  7 16:06:02 PDT 1999
(Mandrake)

this is broken.  good thing it's commented out.

-------------------------------------------------------------------------------

Thu Oct  7 16:17:35 PDT 1999
(Mandrake)

still having a few issues with this code, but at least we're STARTING to have
some of the arrange code for kpanel working.